Dashboard foundation laid

--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "avatar": "Vuetify MD",
+  "avatar": "Homer Simpson",
   "buttons": "Buttons",
   "calendar": "Calendar",
   "charts": "Charts",
